<resources>
    <string name="app_name">Hindi Keyboard</string>

    <string name="stepOne">Step 1: Enable Hindi Keyboard</string>
    <string name="stepTwo">Step 2: Activate Hindi Keyboard</string>
    <string name="MSG_ASK_PERMISSION">This app needs permissions to use this feature. You can grant them in app settings.</string>
    <string name="subtype_en_US">English (US)</string>
    <string name="txt_permission_content">Give permission to draw over the application to disable statusbar\10Do you want to give permission?</string>
    <string name="str_text1">Choose Background</string>
    <string name="str_text10">Art</string>
    <string name="str_text11">Fancy Text</string>
    <string name="str_text12">Share</string>
    <string name="str_text13">More</string>
    <string name="str_text14">Privacy</string>
    <string name="str_text15">Quotes</string>
    <string name="str_text16">Jock</string>
    <string name="str_text17">GIF</string>
    <string name="str_text2">Theme</string>
    <string name="str_text3">Language</string>
    <string name="str_text4">Font</string>
    <string name="str_text5">Dictionary</string>
    <string name="str_text6">Setting</string>
    <string name="str_text7">Rate Us!</string>
    <string name="str_text8">Tell Friends</string>
    <string name="str_text9">Translator</string>
    <string name="str_sub_text1">Change your Keyboard Background</string>
    <string name="str_sub_text10">Explore with Art.</string>
    <string name="str_sub_text11">Type Fancy text.</string>
    <string name="str_sub_text13">More Application From Developer.</string>
    <string name="str_sub_text14">Read Privacy Policy</string>
    <string name="str_sub_text15">Explore Beautiful Quotes.</string>
    <string name="str_sub_text16">Explore Funny Jock.</string>
    <string name="str_sub_text17">Set Animated gif background!</string>
    <string name="str_sub_text2">Select Keyboard Theme</string>
    <string name="str_sub_text3">Enable English,Hindi,Gujarati,Oriya...</string>
    <string name="str_sub_text4">Choose Stylish font</string>
    <string name="str_sub_text5">Download Dictionary</string>
    <string name="str_sub_text6">Your Setting Keyboard</string>
    <string name="str_sub_text7">Give your feedback</string>
    <string name="str_sub_text8">Share with friends</string>
    <string name="str_sub_text9">Translate your message.</string>
    <string name="str_share_message">Hey! Frnds Use Language keyboard to custmize your Keyboard ..\10\10 Its Free. Download and enjoy it. \10\10 https://play.google.com/store/apps/details?id=</string>
    <string name="str_Jockes">Jokes</string>
    <string name="str_Fancy_Txt">Fancy Text</string>
    <string name="str_Quote_text">Quote</string>
    <string name="str_Text_art">Text Art</string>
    <string name="str_Translator">English Translator</string>
    <string name="str_hindi">Hindi</string>
    <string name="str_Search_Words">Search Words</string>
    <string name="str_my_translated_words">My Translated Words</string>
    <string name="str_my_saved_data">My Saved Data</string>
    <string name="str_font_style">Font Style</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_auto_capitalization">Auto-capitalization</string>
    <string name="str_capitalize_the_first_word_of_10each_sentence">Capitalize the first word of each sentence</string>
    <string name="str_popup_on_keypress">Popup on keypress</string>
    <string name="str_vibrate_on_keypress">Vibrate on keypress</string>
    <string name="str_suggestion_on_keypress">Suggestion on keypress</string>
    <string name="str_typing_hindi_or_not">Typing hindi or Not</string>
    <string name="str_portrait_key_height">Portrait Key Height</string>
    <string name="str_landscape_key_height">Landscape Key Height</string>
    <string name="str_suggestion_text_size">Suggestion Text Size</string>
    <string name="str_key_text_color">Key text Color</string>
    <string name="str_preview_text_color">Preview Text Color</string>
    <string name="str_sound_on_keypress">Sound on keypress</string>
    <string name="str_copy_to_translate">Copy to Translate</string>
    <string name="str_Setting">Setting</string>
    <string name="str_Gif_style">Keyboard Gif</string>
    <string name="str_Alert_string">Do you want to set default theme background?</string>
    <string name="str_Alert_gif_string">Do you want to set default theme gif?</string>

    <string name="str_error_text1">नेटवर्क का समय समाप्त !</string>
    <string name="str_error_text10">कृपया बोलना शुरू कीजिये..</string>
    <string name="str_error_text2">नेटवर्क एरर कृपया अपने इंटरनेट की जाँच करे !</string>
    <string name="str_error_text3">ऑडियो एरर कृपया फिर से प्रयास करे !</string>
    <string name="str_error_text4">में सर्वर से कनेक्ट नहीं कर सकता !</string>
    <string name="str_error_text5">में तुम्हे नहीं सुन सकता,कृपया फिर से कोशिश करे !</string>
    <string name="str_error_text6">बोलने का समय समाप्त ,कृपया पुनः प्रयास करे !</string>
    <string name="str_error_text7">मुझे समज नहीं आ रहा हे,कृपया फिर से प्रयास करे !</string>
    <string name="str_error_text8">रेकोगनाइजर व्यस्त हे ,कृपया बाद में प्रयास करे !</string>
    <string name="str_error_text9">कोई पहुंच नहीं है!!</string>

    <string name="str_en_error_text1">Network timeout</string>
    <string name="str_en_error_text10">Let\'s Speak</string>
    <string name="str_en_error_text2">Network Error, Please Check Your Internet</string>
    <string name="str_en_error_text3">Audio Error, Please Try Again</string>
    <string name="str_en_error_text4">I Can not Connect To Server</string>
    <string name="str_en_error_text5">I Can\'t Hear You, Please Try Again</string>
    <string name="str_en_error_text6">Speech Timeout, Please Try Again</string>
    <string name="str_en_error_text7">I Don\'t Understand, Please Try Again</string>
    <string name="str_en_error_text8">Reconizer Busy, Please Try Later</string>
    <string name="str_en_error_text9">Didn\'t understand, please try again.</string>
    <string name="str_isSupportLang">فارسی</string>
    <string name="str_speak_lang_2">hi</string>
    <string name="str_Theme_style">Keyboard Theme</string>
    <string name="str_crop">Crop</string>
    <string name="str_crop_image_activity_title"></string>
    <string name="str_crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="str_crop_image_menu_rotate_right">Rotate</string>
    <string name="str_crop_image_menu_crop">Crop</string>
    <string name="str_crop_image_menu_flip">Flip</string>
    <string name="str_crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="str_crop_image_menu_flip_vertically">Flip vertically</string>

    <string name="str_pick_image_intent_chooser_title">Select source</string>

    <string name="str_crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="str_dict_name1">DictionaryEnglishWords.txt</string>
    <string name="str_dict_name2">DictionaryHindiWords.txt</string>
    <string name="str_dictonary_name">Hindi Dictionary</string>
    <string name="str_phonetic_keyboard">Please Connect To Internet for Phonetic Keyboard</string>
    <string name="str_install_voice_translate">Install Google Voice For Voice Translate</string>
    <string name="str_install_now">Install Now!</string>
    <string name="str_Cancel">Cancel</string>
    <string name="str_No_internet">Opps! No Internet Access, Please Try Again</string>

</resources>