<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Activities.MoreSettingsActivity">

    <RelativeLayout
        android:id="@+id/RlHeaderBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/layout_header" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RlHeaderBar">

        <androidx.cardview.widget.CardView
            android:id="@+id/CardShare"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_58sdp"
            android:layout_margin="0dp"
            android:orientation="horizontal"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.16"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:src="@drawable/ic_share" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.86"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/monsemibold"
                        android:text="@string/str_text12"
                        android:textColor="@color/main_text_color"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/monmedium"
                        android:text="@string/str_sub_text8"
                        android:textColor="@color/sub_text_color"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <View
            android:id="@+id/ViewShare"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.15"
            android:background="@color/main_text_color"
            app:layout_constraintTop_toBottomOf="@id/CardShare" />
        <androidx.cardview.widget.CardView
            android:id="@+id/CardMore"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_58sdp"
            android:layout_margin="0dp"
            android:orientation="horizontal"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ViewShare">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.16"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:src="@drawable/ic_more" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.86"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/monsemibold"
                        android:text="@string/str_text13"
                        android:textColor="@color/main_text_color"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/monmedium"
                        android:text="@string/str_sub_text13"
                        android:textColor="@color/sub_text_color"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <View
            android:id="@+id/ViewMore"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.15"
            android:background="@color/main_text_color"
            app:layout_constraintTop_toBottomOf="@id/CardMore" />
        <androidx.cardview.widget.CardView
            android:id="@+id/CardPrivacy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_58sdp"
            android:layout_margin="0dp"
            android:orientation="horizontal"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ViewMore">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.16"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:src="@drawable/ic_policy" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.86"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/monsemibold"
                        android:text="@string/str_text14"
                        android:textColor="@color/main_text_color"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/monmedium"
                        android:text="@string/str_sub_text14"
                        android:textColor="@color/sub_text_color"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <View
            android:id="@+id/ViewPrivacy"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.15"
            android:background="@color/main_text_color"
            app:layout_constraintTop_toBottomOf="@id/CardPrivacy" />
        <androidx.cardview.widget.CardView
            android:id="@+id/CardRateUs"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_58sdp"
            android:layout_margin="0dp"
            android:orientation="horizontal"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ViewPrivacy">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.16"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:src="@drawable/ic_rate" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.86"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/monsemibold"
                        android:text="@string/str_text7"
                        android:textColor="@color/main_text_color"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/monmedium"
                        android:text="@string/str_sub_text7"
                        android:textColor="@color/sub_text_color"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/FlNative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>